[gd_scene load_steps=11 format=2]

[ext_resource path="res://Player/Player.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Player/PlayerRun.tres" type="Animation" id=3]
[ext_resource path="res://Player/PlayerJump.tres" type="Animation" id=4]
[ext_resource path="res://Player/PlayerIdle.tres" type="Animation" id=5]
[ext_resource path="res://Player/PlayerGun.tscn" type="PackedScene" id=6]
[ext_resource path="res://CollisionBoxes/HurtBox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Player/PlayerCollider.tres" type="Shape2D" id=8]

[sub_resource type="Animation" id=1]
resource_name = "Wall Slide"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 10 ]
}

[sub_resource type="Animation" id=2]
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true, false, true, false, true ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ true ],
"method": "set_invincible"
}, {
"args": [ false ],
"method": "set_invincible"
} ]
}

[node name="Player" type="KinematicBody2D" groups=[
"Persists",
]]
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.490196, 0.894118, 0, 1 )
position = Vector2( 0, -12 )
texture = ExtResource( 1 )
hframes = 12
frame = 11

[node name="PlayerGun" parent="Sprite" instance=ExtResource( 6 )]
show_behind_parent = true
position = Vector2( 1, 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -7 )
shape = ExtResource( 8 )

[node name="SpriteAnimator" type="AnimationPlayer" parent="."]
anims/Idle = ExtResource( 5 )
anims/Jump = ExtResource( 4 )
anims/Run = ExtResource( 3 )
"anims/Wall Slide" = SubResource( 1 )

[node name="BlinkAnimator" type="AnimationPlayer" parent="."]
anims/Blink = SubResource( 2 )

[node name="CameraFollow" type="RemoteTransform2D" parent="."]
position = Vector2( 0, -8 )
update_rotation = false
update_scale = false

[node name="CoyoteJumpTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="FireBulletTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="HurtBox" parent="." instance=ExtResource( 7 )]
collision_layer = 4

[node name="Collider" parent="HurtBox" index="0"]
position = Vector2( 0, -7 )
shape = ExtResource( 8 )

[node name="PowerupDetectror" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="PowerupDetectror"]
position = Vector2( 0, -7 )
shape = ExtResource( 8 )

[connection signal="hit" from="HurtBox" to="." method="_on_HurtBox_hit"]
[connection signal="area_entered" from="PowerupDetectror" to="." method="_on_PowerupDetectror_area_entered"]

[editable path="HurtBox"]
